# All Tcl-scripts in the scripts-directory should be listed here
dist_scripts_DATA =\
	init.tcl \
	ABHmath.tcl \
	auxiliary.tcl \
	blockfile_support.tcl \
	bundle.tcl \
	convertDeserno.tcl \
	countBonds.tcl \
	parallel_tempering.tcl \
	pdb.tcl \
	polymer.tcl \
	pov.tcl \
        set_features \
	statistics.tcl \
	vmd_plg.tcl \
	vtf.tcl \
	tclline.tcl

